# rig-task

./: .gitignore  Cargo.toml  RoadMap.md
benben-task/: Cargo.toml  README.md
benben-task/src/: agent_builder.rs  agent_support.rs  builder.rs  config.rs  lib.rs  mananger.rs  task.rs  workengin.rs  workflow.rs
benben-task/src/engine/: adapter.rs  mod.rs
benben-task/src/entities/: example.rs  job.rs  mod.rs  plan.rs  task.rs  tool_log.rs  workflow.rs
provider/rig-deepseek/: Cargo.toml
provider/rig-deepseek/examples/: agent_with_deepseek.rs  deepseek_embedding.rs  deepseek_multi_turn.rs  deepseek_streaming.rs  deepseek_structured_output.rs  deepseek_tool_usage.rs  extractor_with_deepseek.rs
provider/rig-deepseek/src/: client.rs  completion.rs  lib.rs  streaming.rs
provider/rig-deepseek/src/convert/: message.rs  tool.rs
provider/rig-ollama/: Cargo.toml
provider/rig-ollama/examples/: counter.rs  ollama_streaming_with_tools.rs  ollama_structured_output.rs  vector_search_ollama.rs
provider/rig-ollama/src/: client.rs  completion.rs  embedding.rs  lib.rs  model.rs  streaming.rs
provider/rig-ollama/src/convert/: tool.rs
rig-core/: Cargo.toml
rig-core/examples/: request_hook.rs  rmcp.rs
rig-core/rig-core-derive/: Cargo.toml
rig-core/src/: lib.rs  one_or_many.rs  prelude.rs  streaming.rs
rig-core/src/agent/: builder.rs  completion.rs  mod.rs  tool.rs
rig-core/src/agent/prompt_request/: mod.rs  streaming.rs
rig-core/src/client/: builder.rs  completion.rs  mod.rs
rig-core/src/completion/: request.rs
rig-core/src/embeddings/: mod.rs
rig-core/src/providers/: mod.rs  moonshot.rs
rig-core/src/providers/cohere/: client.rs
rig-core/src/providers/gemini/: client.rs  mod.rs
rig-core/src/providers/huggingface/: client.rs  mod.rs
rig-core/src/providers/openai/: client.rs  mod.rs
rig-deepseek/: Cargo.toml
rig-deepseek/src/: client.rs  completion.rs  lib.rs  streaming.rs
rig-deepseek/src/convert/: message.rs  mod.rs  rsp_req.rs  tool.rs
rig-lancedb/: Cargo.toml
rig-ollama/: Cargo.toml
rig-ollama/examples/: agent_with_ollama.rs  ollama_streaming.rs  ollama_streaming_pause_control.rs  ollama_streaming_with_tools.rs  rag_ollama.rs
rig-ollama/src/: client.rs  completion.rs  lib.rs  model.rs
rig-ollama/src/convert/: message.rs  mod.rs  rsp_req.rs  tool.rs
vector/rig-lancedb/: Cargo.toml
