[package]
name = "benben-task"
version = "0.1.0"
edition.workspace = true

[dependencies]
rig-core = { path = "../rig-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
once_cell = { version = "1.21.3" }
# Provider dependencies (uncomment as needed)
rig_ollama = { path = "../provider/rig-ollama" }
rig_deepseek = { path = "../provider/rig-deepseek" }

rmcp = { workspace = true, features = [
    "client",
    # "transport-sse-client-reqwest",
    # "reqwest",
    # "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    # "auth",
] }
