[package]
name = "rig-core"
version = "0.21.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "An opinionated library for building LLM powered applications."
repository = "https://github.com/0xPlaygrounds/rig"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "rig"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-any = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }

mime_guess = { workspace = true }
ordered-float = { workspace = true }
quick-xml = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
worker = { workspace = true, optional = true }
rmcp = {workspace = true, features = [
    "client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "macros",
    "server",
    "schemars",
] }
reqwest-eventsource = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing-futures = { workspace = true, features = ["futures-03"] }

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-test = { workspace = true }
serde_path_to_error = { workspace = true }
base64 = { workspace = true }

# Required for `rmcp` example
hyper-util = { version = "0.1.14", features = ["service", "server"] }

axum = "0.8.4"
# required for otel
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.31.0"


[features]
default = ["reqwest/default"]
all = [  "rayon"]
rayon = ["dep:rayon"]
worker = ["dep:worker"]
socks = ["reqwest/socks"]
# Replace "default-tls" with "rustls-tls" in "reqwest/default"
reqwest-rustls = [
    "reqwest/rustls-tls",
    "reqwest/charset",
    "reqwest/http2",
    "reqwest/macos-system-configuration",
]

[[test]]
name = "embed_macro"
required-features = ["derive"]




