[package]
name = "rig_deepseek"
version = "0.0.1"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "AWS Bedrock model provider for Rig integration."

[lib]
name = "rig_deepseek"
path = "src/lib.rs"


[dependencies]
async-stream = { workspace = true }
base64 = { workspace = true }
rig-core = { path = "../../rig-core", features = ["worker", "rmcp"] }
rig-derive = { path = "../../rig-core/rig-core-derive" }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
tracing-futures = { workspace = true, features = ["futures-03"] }
futures = { workspace = true }
thiserror = { workspace = true }
reqwest-eventsource = { workspace = true }
worker = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing-subscriber = { workspace = true }

[features]
default = ["worker"]
worker = ["dep:worker"]
# 根据apenai的模式为deepseek生成相应的examples


